Changelog
=========

1.0b8 - unreleased
------------------

- Only add content type icons when they are enabled.
  Fixes http://dev.plone.org/plone/ticket/10541
  [davisagli]

- Remove the sprited icons for the file and image content types, to avoid
  double icons. Fixes http://dev.plone.org/plone/ticket/10501.
  [davisagli]

- Improved printing: hide some UI, better document and listing views
  [tdesvenain]

- Restore some of the headline/description styling that was lost when
  Denys' branch was merged.
  [limi]

- Adding a border to the dialog boxes, so it doesn't appear borderless on
  browsers that don't support box-shadow, like Internet Explorer.
  Fixes http://dev.plone.org/plone/ticket/10630.
  [limi]

1.0b7 - 2010-05-31
------------------

- Improved typography and vertical rhythm of the theme to improve UX.
  [spliter]

- Moved overlay close button to upper-left to get it off the vertical
  scrollbar when a an ajax overlay is longer than the viewport.
  [stevem]

- Set overflow-y:auto on ajax overlays to support forms longer than the
  viewport.
  [stevem]

1.0b6 - 2010-05-03
------------------

- Remove styling of path_bar. Breadcrumbs should now behave in a manner
  similar to that of Plone 3.
  [esteele]

1.0b5 - 2010-05-03
------------------

- Show current page in breadcrumbs, give the surrounding div the same height
  as our portal-headers for consistency.
  [esteele]

- Dtml vars removed.
  Fixes: http://dev.plone.org/plone/ticket/10492
  [pelle]

- Improved :focus which is an accessibility requirement, a level 2 priority
  point/AA. This was removed entirely due to the reset css in use, so
  specifying :hover then remember :focus as well.
  Fixes: http://dev.plone.org/plone/ticket/10472
  [pelle]

- Fix for global navigation colliding with portlets, bread crumb etc.
  http://dev.plone.org/plone/ticket/10491
  [pelle]

1.0b4 - 2010-05-01
------------------

- Always enable breadcrumbs on all levels. ploneCustom contains an example on